# heladeria_frozen_bot

./: .gitignore  README.md
basic_version/: bot.py
full_version/: app.db  main.py  pyproject.toml
full_version/alembic/: env.py
full_version/bot/: __main__.py  auxiliar.py  config.py  crud.py  database.py  exceptions.py  models.py  schemas.py  ui.py  utils.py  weather.py
full_version/scripts/: __init__.py  clean_db.py  fill_db.py
